WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302486
REGRESSION(
302408@main
?): [iOS Release ] http/tests/site-isolation/history/add-iframes-and-navigate-mainframe.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=302486
Summary
REGRESSION(302408@main?): [iOS Release ] http/tests/site-isolation/history/ad...
Marta Darbinyan
Reported
2025-11-13 10:56:52 PST
The following test is intermittently crashing on iOS Release. The regression range is
302402@main...302412@main
. http/tests/site-isolation/history/add-iframes-and-navigate-mainframe.html Thread 0 Crashed:: Dispatch queue: 0 com.apple.WebKit 0x10c44ab54 WebKit::RemoteLayerTreeDrawingAreaProxy::commitLayerTree(IPC::Connection&, WebKit::RemoteLayerTreeCommitBundle const&, WTF::HashMap<WTF::ObjectIdentifierGeneric<WebKit::ImageBufferSetIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>, std::__1::unique_ptr<WebKit::BufferSetBackendHandle, std::__1::default_delete<WebKit::BufferSetBackendHandle>>, WTF::DefaultHash<WTF::ObjectIdentifierGeneric<WebKit::ImageBufferSetIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::HashTraits<WTF::ObjectIdentifierGeneric<WebKit::ImageBufferSetIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>>, WTF::HashTraits<std::__1::unique_ptr<WebKit::BufferSetBackendHandle, std::__1::default_delete<WebKit::BufferSetBackendHandle>>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>&&) 1 com.apple.WebKit 0x10cb1a32c WebKit::RemoteLayerTreeDrawingAreaProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 2 com.apple.WebKit 0x10cc1fbfc WebKit::RemotePageDrawingAreaProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 3 com.apple.WebKit 0x10ca808c8 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 4 com.apple.WebKit 0x10c692c84 WebKit::WebProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 5 com.apple.WebKit 0x10cb3c380 WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 6 com.apple.WebKit 0x10ca600c0 IPC::Connection::dispatchMessage(IPC::Decoder&) 7 com.apple.WebKit 0x10ca60264 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 8 com.apple.WebKit 0x10ca60600 IPC::Connection::dispatchIncomingMessages() 9 com.apple.JavaScriptCore 0x105807ea8 WTF::RunLoop::performWork() 10 com.apple.JavaScriptCore 0x105809100 WTF::RunLoop::performWork(void*) 11 com.apple.CoreFoundation 0x18044d4dc __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 24 /Library/Caches/com.apple.xbs/Sources/CoreFoundation_Sim/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2021 12 com.apple.CoreFoundation 0x18044d424 __CFRunLoopDoSource0 + 168 /Library/Caches/com.apple.xbs/Sources/CoreFoundation_Sim/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2065 13 com.apple.CoreFoundation 0x18044cbb0 __CFRunLoopDoSources0 + 220 /Library/Caches/com.apple.xbs/Sources/CoreFoundation_Sim/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2102 14 com.apple.CoreFoundation 0x18044bd84 __CFRunLoopRun + 760 /Library/Caches/com.apple.xbs/Sources/CoreFoundation_Sim/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2983 15 com.apple.CoreFoundation 0x180446e24 _CFRunLoopRunSpecificWithOptions + 496 /Library/Caches/com.apple.xbs/Sources/CoreFoundation_Sim/CoreFoundation/RunLoop.subproj/CFRunLoop.c:3462 16 com.apple.Foundation 0x1810f1cac -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 208 /Library/Caches/com.apple.xbs/Sources/Foundation_Sim/Foundation/Soil.subproj/NSRunLoop.m:375 17 org.webkit.WebKitTestRunnerApp 0x102769cf4 WTR::TestController::platformRunUntil(bool&, WTF::Seconds) 18 org.webkit.WebKitTestRunnerApp 0x1027a4c38 WTR::TestInvocation::invoke() 19 org.webkit.WebKitTestRunnerApp 0x102750b5c WTR::TestController::runTest(char const*) 20 org.webkit.WebKitTestRunnerApp 0x102750dc4 WTR::TestController::runTestingServerLoop() 21 org.webkit.WebKitTestRunnerApp 0x102747dac WTR::TestController::TestController(int, char const**) 22 org.webkit.WebKitTestRunnerApp 0x102731208 -[WebKitTestRunnerApp _runTestController] 23 com.apple.Foundation 0x181118ee8 -[_NSThreadPerformInfo invoke] + 12 /Library/Caches/com.apple.xbs/Sources/Foundation_Sim/Foundation/Soil.subproj/NSThread.m:283 [inlined] 24 com.apple.Foundation 0x181118ee8 __NSThreadPerformPerform + 124 /Library/Caches/com.apple.xbs/Sources/Foundation_Sim/Foundation/Soil.subproj/NSThread.m:1093 25 com.apple.CoreFoundation 0x18044d4dc __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 24 /Library/Caches/com.apple.xbs/Sources/CoreFoundation_Sim/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2021 26 com.apple.CoreFoundation 0x18044d424 __CFRunLoopDoSource0 + 168 /Library/Caches/com.apple.xbs/Sources/CoreFoundation_Sim/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2065 27 com.apple.CoreFoundation 0x18044cc0c __CFRunLoopDoSources0 + 312 /Library/Caches/com.apple.xbs/Sources/CoreFoundation_Sim/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2110 28 com.apple.CoreFoundation 0x18044bd84 __CFRunLoopRun + 760 /Library/Caches/com.apple.xbs/Sources/CoreFoundation_Sim/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2983 29 com.apple.CoreFoundation 0x180446e24 _CFRunLoopRunSpecificWithOptions + 496 /Library/Caches/com.apple.xbs/Sources/CoreFoundation_Sim/CoreFoundation/RunLoop.subproj/CFRunLoop.c:3462 30 com.apple.GraphicsServices 0x1925319bc GSEventRunModal + 116 /Library/Caches/com.apple.xbs/Sources/GraphicsServices_Sim/GSEvent.c:2049 31 com.apple.UIKitCore 0x18625fc3c -[UIApplication _run] + 772 /Library/Caches/com.apple.xbs/Sources/UIKitCore_Sim/Sources/Application/UIApplication.m:3899 32 com.apple.UIKitCore 0x186263e64 UIApplicationMain + 124 /Library/Caches/com.apple.xbs/Sources/UIKitCore_Sim/Sources/Application/UIApplication.m:5574 33 org.webkit.WebKitTestRunnerApp 0x1027312fc main 34 0x102b813d0 35 dyld 0x102914d54 start + 7184 /AppleInternal/Library/BuildRoots/4~B8YMugCXaiUqd-1BpxjuLrASYPrc1ZweNkXyCfA/Library/Caches/com.apple.xbs/Sources/dyld/dyld/dyldMain.cpp:1477 History:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fsite-isolation%2Fhistory%2Fadd-iframes-and-navigate-mainframe.html&style=release&platform=ios
Test result:
https://ews-build.webkit.org/#/builders/162/builds/2265
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-13 10:57:22 PST
<
rdar://problem/164649768
>
EWS
Comment 2
2025-11-13 12:16:44 PST
Committed
302999@main
(f506c963cb1a): <
https://commits.webkit.org/302999@main
> Reviewed commits have been landed. Closing PR #53891 and removing active labels.
Alexey Proskuryakov
Comment 3
2025-11-13 15:45:03 PST
This was just a TestExpectations change.
Ruthvik Konda
Comment 4
2025-11-17 16:21:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54076
EWS
Comment 5
2025-11-18 11:21:16 PST
Committed
303201@main
(833e48566aaa): <
https://commits.webkit.org/303201@main
> Reviewed commits have been landed. Closing PR #54076 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug