REGRESSION(302408@main?): [iOS Release ] http/tests/site-isolation/history/add-iframes-and-navigate-mainframe.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=302486 rdar://164649768

Initially, we added this MESSAGE_CHECK at the start of commitLayerTree() to verify that main frame data is only provided
from the main frame process. However due to some race conditions that occur with cross site navigations in
SI, some tests like http/tests/site-isolation/history/add-iframes-and-navigate-mainframe.html,
TestWebKitAPI.SiteIsolation.NavigationAfterWindowOpen, and http/tests/site-isolation/window-open-with-name-cross-site.html
are flaky crashes now. We revert the MESSAGE_CHECK for now. The follow up fix is being tracked in rdar://164916965.

Unreviewed, reverting part of 302408@main.

* LayoutTests/platform/ios/TestExpectations:
* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.mm:
(WebKit::RemoteLayerTreeDrawingAreaProxy::commitLayerTree):

Canonical link: https://commits.webkit.org/303201@main